Fix mobile browser bugs (#34)
* Fix not showing menu in mobile devices bug

* Fix not working space-between on old android browser

--- a/src/components/Menu/CompositeMenu/index.scss
+++ b/src/components/Menu/CompositeMenu/index.scss
@@ -24,6 +24,7 @@
     }
 
     & .title {
+      display: block;
       font-size: 1.5rem;
 
       & .ridibooks {
@@ -39,7 +40,7 @@
 
   & .content {
     min-height: 0;
-    flex: 1;
+    flex: 1 1 auto;
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: stretch;
@@ -67,7 +68,7 @@
 
     & .filterable_menu {
       min-height: 0;
-      flex: 1;
+      flex: 1 1 auto;
 
       & .menu_filter {
         & .input {
